config-9gl2iqjxa.json: updated altText in logo

--- a/content/data/config-9gl2iqjxa.json
+++ b/content/data/config-9gl2iqjxa.json
@@ -9,7 +9,7 @@
         "logo": {
             "type": "ImageBlock",
             "url": "/images/portfolio-image-dark-theme-d155966e.webp",
-            "altText": "Your logo image",
+            "altText": "Ryan Furrer Logo",
             "caption": ""
         },
         "primaryLinks": [
