config-9gl2iqjxa.json: updated caption in logo

--- a/content/data/config-9gl2iqjxa.json
+++ b/content/data/config-9gl2iqjxa.json
@@ -10,7 +10,7 @@
             "type": "ImageBlock",
             "url": "/images/portfolio-image-dark-theme-d155966e.webp",
             "altText": "Ryan Furrer Logo",
-            "caption": ""
+            "caption": "Ryan Furrer Logo"
         },
         "primaryLinks": [
             {
