config.json: updated url in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -74,7 +74,8 @@
                     "opacity": 100
                 }
             },
-            "type": "ImageBlock"
+            "type": "ImageBlock",
+            "url": "/images/dianne-ameter.jpg"
         }
     },
     "footer": {
