config.json: updated url in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -74,8 +74,7 @@
                     "opacity": 100
                 }
             },
-            "type": "ImageBlock",
-            "url": "/images/dianne-ameter.jpg"
+            "type": "ImageBlock"
         }
     },
     "footer": {
