--- a/content/data/config.json
+++ b/content/data/config.json
@@ -175,6 +175,18 @@
                     "pl-4"
                 ]
             }
+        },
+        "logo": {
+            "url": "https://assets.stackbit.com/components/images/default/default-image.png",
+            "altText": "altText of the image",
+            "caption": "Caption of the image",
+            "elementId": "",
+            "styles": {
+                "self": {
+                    "opacity": 100
+                }
+            },
+            "type": "ImageBlock"
         }
     }
 }
