--- a/content/data/config.json
+++ b/content/data/config.json
@@ -78,7 +78,7 @@
         }
     },
     "footer": {
-        "colors": "colors-h",
+        "colors": "colors-c",
         "title": "The Ryan Furrer Blog",
         "contacts": {
             "title": "Contact details"
