config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -10,7 +10,7 @@
         "primaryLinks": [
             {
                 "type": "Link",
-                "label": "Portfolio",
+                "label": "Portfolio Home",
                 "url": "https://furrer-2022.netlify.app/",
                 "altText": "View my portfolio"
             },
