config.json: updated primaryLinks in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -45,6 +45,16 @@
                 "iconPosition": "right",
                 "elementId": "",
                 "type": "Link"
+            },
+            {
+                "label": "Learn more",
+                "altText": "",
+                "url": "/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": "",
+                "type": "Link"
             }
         ],
         "secondaryLinks": [],
