config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -47,7 +47,7 @@
                 "type": "Link"
             },
             {
-                "label": "Learn more",
+                "label": "Projects",
                 "altText": "",
                 "url": "/",
                 "showIcon": false,
