config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -48,7 +48,7 @@
             },
             {
                 "label": "Projects",
-                "altText": "",
+                "altText": "View my projects",
                 "url": "/",
                 "showIcon": false,
                 "icon": "arrowRight",
