config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -97,7 +97,7 @@
             },
             {
                 "type": "Link",
-                "label": "Home",
+                "label": "Projects",
                 "url": "/",
                 "altText": "Homepage"
             },
