config.json: updated altText in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -99,7 +99,7 @@
                 "type": "Link",
                 "label": "Projects",
                 "url": "/",
-                "altText": "Homepage"
+                "altText": "View my projects"
             },
             {
                 "label": "Blog",
