config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -98,7 +98,7 @@
             {
                 "type": "Link",
                 "label": "Projects",
-                "url": "/",
+                "url": "https://furrer-2022.netlify.app/#projects",
                 "altText": "View my projects"
             },
             {
