config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -11,7 +11,7 @@
             {
                 "type": "Link",
                 "label": "Portfolio Home",
-                "url": "https://furrer-2022.netlify.app/",
+                "url": "https://theryanfurrer.dev/",
                 "altText": "View my portfolio"
             },
             {
