--- a/content/data/config.json
+++ b/content/data/config.json
@@ -17,7 +17,7 @@
             {
                 "label": "Projects",
                 "altText": "View my projects",
-                "url": "https://furrer-2022.netlify.app/#projects",
+                "url": "https://theryanfurrer.dev/#projects",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
