config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -44,7 +44,7 @@
                 "type": "Link",
                 "label": "Contact",
                 "altText": "Contact Ryan Furrer",
-                "url": "https://furrer-2022.netlify.app/contact.html"
+                "url": "https://theryanfurrer.dev/contact.html"
             },
             {
                 "label": "GitHub",
