--- a/content/data/config.json
+++ b/content/data/config.json
@@ -92,7 +92,7 @@
             {
                 "type": "Link",
                 "label": "Portfolio Home",
-                "url": "https://furrer-2022.netlify.app/",
+                "url": "https://theryanfurrer.dev/",
                 "altText": "Visit my portfolio"
             },
             {
