config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -120,7 +120,7 @@
             {
                 "type": "Link",
                 "label": "Contact",
-                "url": "https://furrer-2022.netlify.app/contact.html",
+                "url": "https://theryanfurrer.dev/contact.html",
                 "altText": "Contact Ryan Furrer"
             },
             {
