--- a/.stackbit/models/Config.yaml
+++ b/.stackbit/models/Config.yaml
@@ -20,7 +20,7 @@ fields:
     label: Footer configuration
     models: [Footer]
   - type: string
-    name: titleSuffix
+    name: The Ryan Furrer Blog
     label: Suffix for page titles
     description: 'Suffix to append to the title tag of all pages, except in pages where the this behavior is disabled (e.g. typically the home page should have the site name as a prefix)'
     default: null
