Config.yaml: changed

--- a/.stackbit/models/Config.yaml
+++ b/.stackbit/models/Config.yaml
@@ -20,9 +20,9 @@ fields:
     label: Footer configuration
     models: [Footer]
   - type: string
-    name: The Ryan Furrer Blog
-    label: The Ryan Furrer Blog
-    description: 'The Ryan Furrer Blog'
+    name: titleSuffix
+    label: Suffix for page titles
+    description: 'Suffix to append to the title tag of all pages, except in pages where the this behavior is disabled (e.g. typically the home page should have the site name as a prefix)'
     default: null
     group: seo
   - type: image
