Config.yaml: changed

--- a/.stackbit/models/Config.yaml
+++ b/.stackbit/models/Config.yaml
@@ -19,10 +19,10 @@ fields:
     name: footer
     label: Footer configuration
     models: [Footer]
-  - type: string
+    - type: string
     name: titleSuffix
     label: Suffix for page titles
-    description: 'The Ryan Furrer Blog'
+    description: 'Suffix to append to the title tag of all pages, except in pages where the this behavior is disabled (e.g. typically the home page should have the site name as a prefix)'
     default: null
     group: seo
   - type: image
