--- a/content/data/config.json
+++ b/content/data/config.json
@@ -49,7 +49,7 @@
             {
                 "label": "GitHub",
                 "altText": "View my GitHub profile",
-                "url": "https://github.com/TheRyanFurrer",
+                "url": "https://github.com/ryanfurrer",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
