--- a/content/data/config.json
+++ b/content/data/config.json
@@ -87,7 +87,7 @@
         "contacts": {
             "title": "Contact details"
         },
-        "copyrightText": "All rights reserved © [Ryan Furrer](https://furrer-2022.netlify.app/) 2022\n\n",
+        "copyrightText": "All rights reserved © [Ryan Furrer](https://theryanfurrer.dev/) 2022\n\n",
         "primaryLinks": [
             {
                 "type": "Link",
