config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -126,7 +126,7 @@
             {
                 "label": "GitHub",
                 "altText": "View my GitHub Profile",
-                "url": "https://github.com/TheRyanFurrer",
+                "url": "https://github.com/ryanfurrer",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
