config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -139,7 +139,7 @@
                 "type": "Social",
                 "altText": "View my GitHub profile",
                 "label": "GitHub",
-                "url": "https://github.com/TheRyanFurrer",
+                "url": "https://github.com/ryanfurrer",
                 "icon": "github",
                 "style": "link"
             },
