config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -155,7 +155,7 @@
                 "type": "Social",
                 "altText": "View my Twitter profile",
                 "label": "Twitter",
-                "url": "https://twitter.com/theryanfurrer",
+                "url": "https://twitter.com/ryan_furrer",
                 "icon": "twitter",
                 "style": "link"
             },
