config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
         "headerVariant": "variant-c",
         "primaryColors": "colors-c",
         "secondaryColors": "colors-f",
-        "title": "The Ryan Furrer Blog",
+        "title": "The RF Blog",
         "isTitleVisible": true,
         "primaryLinks": [
             {
