config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -11,7 +11,7 @@
             {
                 "type": "Link",
                 "label": "Portfolio Home",
-                "url": "https://theryanfurrer.dev/",
+                "url": "https://ryanfurrer.com/",
                 "altText": "View my portfolio"
             },
             {
