config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -83,7 +83,7 @@
     },
     "footer": {
         "colors": "colors-c",
-        "title": "The Ryan Furrer Blog",
+        "title": "The RF Blog",
         "contacts": {
             "title": "Contact details"
         },
