config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -87,7 +87,7 @@
         "contacts": {
             "title": "Contact details"
         },
-        "copyrightText": "All rights reserved © [Ryan Furrer](https://theryanfurrer.dev/) 2023\n\n",
+        "copyrightText": "All rights reserved © [Ryan Furrer](https://ryanfurrer.com/) 2023\n\n",
         "primaryLinks": [
             {
                 "type": "Link",
