--- a/content/data/config.json
+++ b/content/data/config.json
@@ -98,7 +98,7 @@
             {
                 "type": "Link",
                 "label": "Projects",
-                "url": "https://theryanfurrer.dev/#projects",
+                "url": "https://ryanfurrer.com/#projects",
                 "altText": "View my projects"
             },
             {
