config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -114,7 +114,7 @@
             {
                 "type": "Link",
                 "label": "About",
-                "url": "https://theryanfurrer.dev/about.html",
+                "url": "https://ryanfurrer.com/about.html",
                 "altText": "Learn more about Ryan Furrer"
             },
             {
