config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -147,7 +147,7 @@
                 "type": "Social",
                 "altText": "View my Linkedin profile",
                 "label": "Linkedin",
-                "url": "https://www.linkedin.com/in/theryanfurrer/",
+                "url": "https://www.linkedin.com/in/ryanfurrer/",
                 "icon": "linkedin",
                 "style": "link"
             },
