config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -162,7 +162,7 @@
             {
                 "label": "Instagram",
                 "altText": "View my Instagram",
-                "url": "https://www.instagram.com/theryanfurrer/",
+                "url": "https://www.instagram.com/ryan.m.furrer/",
                 "icon": "instagram",
                 "style": "link",
                 "elementId": ""
